<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_small" >
    
    
	<LinearLayout 
	    android:baselineAligned="false"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    
	      
	      <FrameLayout
		      android:layout_width="wrap_content"
		      android:layout_height="wrap_content"
		      android:layout_gravity="center"
		      android:foreground="@drawable/overlay"
			  android:layout_marginRight="15dp"
		      android:foregroundGravity="center"
		      >
			    <ImageView
			        android:id="@+id/avatar"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_gravity="center"
			        android:src="@drawable/avatar"
			        android:contentDescription="@string/app_name"
			        />
						    
			    
		</FrameLayout>
  
	   
	    
	    <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:orientation="vertical">
	        
		    <TextView 
		        android:id="@+id/name"
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:textSize="@dimen/font_large"
			    android:textColor="@color/font_dark"
			    android:text="@string/name_text"
			    android:textStyle="bold"/>
		    
			    <TextView 
			        android:id="@+id/screen_name"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:textSize="@dimen/font_medium"
				    android:text="@string/screen_name_text"
				    android:textColor="@color/green_dark"/>
		    
		    <TextView 
		        android:id="@+id/text"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/font_medium"
		        android:text="@string/text_text"
		        android:textColor="@color/blue_dark"/>
		    <TextView 
		        android:id="@+id/created_at"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:textSize="@dimen/font_small"
		        android:textColor="@color/blue_dark"
		        android:text="@string/created_at_text"
		        android:gravity="right"/>
	        
	    </LinearLayout>
	    
	</LinearLayout>

</LinearLayout>
